# TGRIP

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  download_weights.sh  pyproject.toml  setup_carla.sh  test_carla.py
bevpredformer/: measure_model_perf.py  pruebas.py  train.py  val.py  visualize_batch.py
bevpredformer/data/datamodule/: nuscenes_loader.py
bevpredformer/data/dataset/: nuscenes_common.py  nuscenes_temporal.py  nuscenes_temporal_text.py
bevpredformer/loss/: __init__.py  common.py  segmentation.py
bevpredformer/metric/: segmentation.py  temporal.py
bevpredformer/models/: common.py  predictor.py  segmentor.py  trainer.py
bevpredformer/models/autoencoder/: segformer.py  sparse_resnet.py
bevpredformer/models/heads/: pyramid_head.py
bevpredformer/models/img_encoder/: __init__.py
bevpredformer/models/img_encoder/backbones/: __init__.py  common.py  efficientnet.py  efficientvit.py  resnet.py
bevpredformer/models/img_encoder/neck/: agp.py
bevpredformer/models/layers/: __init__.py  attention.py  bevformer.py  gated_transformer.py  stconv.py
bevpredformer/models/projector/: __init__.py  common.py
bevpredformer/models/temporal/: diff_guided_predformer.py  predformer.py
bevpredformer/models/view_transform/: attention.py  gridsample.py
bevpredformer/utils/: __init__.py  geom.py  instance_pred.py  instantiators.py  logger.py  rich_utils.py  utils.py
configs/: train.yaml  train_distillation.yaml  train_fae.yaml  train_short.yaml  val.yaml  val_short.yaml  visualize.yaml
configs/callbacks/: default_pl.yaml
configs/callbacks/bar/: tqdm_progress_bar.yaml
configs/data/: nuscenes.yaml  nuscenes_pred.yaml
configs/hydra/: default.yaml
configs/logger/: default_pl.yaml
configs/losses/: cewithlogit.yaml  focalwithlogit.yaml
configs/model/: BEVPredFormer.yaml  BEVPredFormerPredictor.yaml  FaE.yaml  TGRIP.yaml  TGRIPPredictor.yaml  TGRIPPredictorDistill.yaml
configs/model/net/autoencoder/: segformer.yaml  sparse_unet.yaml
configs/model/net/backbone/: dinov3.yaml  efficientnet.yaml  efficientvit.yaml  resnet101.yaml  resnet50.yaml
configs/model/net/heads/: pyramid_stconv.yaml  single_pyramid_stconv.yaml
configs/model/teacher/: TGRIPPredictor_teacher_CLIP.yaml  TGRIPPredictor_teacher_SigLIP.yaml
configs/paths/: default.yaml
configs/trainer/: ddp_pl.yaml
docker/: Dockerfile  build_and_push.sh  entrypoint.sh  pull_image.sh  requirements.txt  run_interactive_container.sh  run_training_container.sh
hydra_plugins/: resolvers.py
scripts/: sweep_vpq.py  visualize_instances_over_time.py
tgrip/: create_semantic_gt.py  gradio_vis_app.py  measure_model_perf.py  preprocess_nuscenes_map.py  pruebas.py  train.py  val.py  visualize_batch.py  visualize_results.py  visualize_semantic_maps.py
tgrip/data/datamodule/: nuscenes_loader.py
tgrip/data/dataset/: __init__.py  create_maps.py  nuscenes_common.py  nuscenes_temporal.py  nuscenes_temporal_text.py  semantic_data.py
tgrip/loss/: __init__.py  common.py  cosine_similarity.py  segmentation.py
tgrip/metric/: __init__.py  segmentation.py  semantic.py
tgrip/models/: __init__.py  common.py  fae.py  predictor.py  segmentor.py  teacher_student.py  trainer.py  trainer_fae.py
tgrip/models/autoencoder/: __init__.py  sparse_resnet.py
tgrip/models/heads/: __init__.py  pyramid_head.py  semantic_head.py
tgrip/models/img_encoder/: __init__.py
tgrip/models/layers/: attention.py  bevformer.py
tgrip/models/projector/: common.py
tgrip/models/temporal/: __init__.py  diff_guided_predformer.py  predformer.py
tgrip/models/text_conditioner/: __init__.py  attention.py  ca_fuser.py  clip_fuser.py  film.py  projector.py
tgrip/models/text_encoder/: __init__.py  bert_mini.py  clip.py  minilm.py  siglip.py
tgrip/models/view_transform/: __init__.py  attention.py  gridsample.py
tgrip/ops/defattn/: pyproject.toml  setup.py
tgrip/ops/defattn/functions/: ms_deform_attn_func.py
tgrip/ops/defattn/src/cuda/: ms_deform_attn_cuda.cu
tgrip/ops/gs/: pyproject.toml
tgrip/utils/: __init__.py  calculate_tracking_metrics.py  create_flow_seg_gt.py  create_semantic_gt_clip.py  create_semantic_gt_dinov2.py  create_semantic_gt_siglip.py  debug.py  geom.py  imgs.py  instance_pred.py  instantiators.py  logger.py  model.py  object.py  rich_utils.py  utils.py
(+24 files in other folders)
