[project]
name = "TGRIP"
version = "1.0"
description = "TGRIP"
authors = [
    { name = "Miguel Antunes" }
]
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "click>=8.2.1",
    "cowsay>=6.1",
    "efficientnet-pytorch==0.7.1",
    "einops>=0.8.1",
    "gradio>=6.0.1",
    "hydra-colorlog==1.2.0",
    "hydra-core==1.3.2",
    "hydra-optuna-sweeper==1.2.0",
    "imageio>=2.37.0",
    "lightning>2.0.0",
    "lyft-dataset-sdk>=0.0.8",
    "matplotlib<3.8.0",
    "multiscaledeformableattention>=1.0",
    "numpy==1.26.4",
    "nuscenes-devkit>=1.1.0",
    "opencv-python>=4.11.0.86",
    "peft>=0.17.1",
    "pre-commit>=4.3.0",
    "pyfiglet>=1.0.4",
    "pyquaternion>=0.9.9",
    "pyrootutils>=1.0.4",
    "pytest>=8.4.1",
    "rich>=14.1.0",
    "scikit-learn>=1.7.1",
    "scipy>=1.10.0",
    "sentencepiece>=0.2.1",
    "setuptools>=80.9.0",
    "shapely>=1.8.5",
    "spconv-cu126>=2.3.8",
    "tensorboard>=2.20.0",
    "timm>=1.0.20",
    "torch>=2.6.0",
    "torch-geometric>=2.6.1",
    "torchaudio>=2.6.0",
    "torchinfo>=1.8.0",
    "torchmetrics>=1.0.0",
    "torchvision>=0.15.0",
    "transformers==5.0.0rc0",
    "wandb>=0.21.3",
]

[build-system]
requires = ["setuptools >= 77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["logs", "tgrip", "docker", "configs", "checkpoints", "hydra_plugins"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu129" },
]
torchvision = [
  { index = "pytorch-cu129" },
]
multiscaledeformableattention = [
  { path = "./tgrip/ops/defattn" },
]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true
