[build-system]
requires = ["setuptools>=77", "wheel", "torch>=2.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sparse_gs"
version = "1.0"
description = "Sparse grid sampling."
authors = [
    { name = "Loick Chambon", email = "loick.chambon@valeo.com" }
]
requires-python = ">=3.8"
dependencies = [
    "torch>=2.6.0",
    "torchvision"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cuda"]